testcases/project_3/12.last_main.c
void func(void) {}

void main()
{
  int a;
}

void func2(void) // error
{}
int func2(void) // error
{}
void func2(int a, int arr[2])
{}
